# curso_clean_code_turma_4_factoring

./: .gitignore  Makefile  README.md  pyproject.toml
refactor/: example_after.py  example_before.py
tests/: test_example_after.py
