[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["anderson89marques <andersonoanjo18@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
black = "^21.12b0"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
